# t2macd

./: Cargo.toml  README.md
.github/workflows/: checks.yaml
src/: main.rs
